--- a/Neos.Media.Browser/Resources/Private/Partials/ListView.html
+++ b/Neos.Media.Browser/Resources/Private/Partials/ListView.html
@@ -6,9 +6,9 @@
 			<tr>
 				<th></th>
 				<th>
-					<f:if condition="{sortBy} == 'Name'">
+					<f:if condition="{sortBy} === 'Name'">
 						<f:then>
-							<f:if condition="{sortDirection} == 'ASC'">
+							<f:if condition="{sortDirection} === 'ASC'">
 								<f:then>
 									<f:link.action action="index" title="{neos:backend.translate(id: 'sortByName', package: 'Neos.Media.Browser')} ({neos:backend.translate(id: 'sortdirection.desc', package: 'Neos.Media.Browser') -> f:format.case(mode: 'lower')})" data="{neos-toggle: 'tooltip'}" arguments="{sortDirection: 'DESC'}" addQueryString="TRUE">
 										{neos:backend.translate(id: 'field.name', package: 'Neos.Media.Browser')}
@@ -31,9 +31,9 @@
 					</f:if>
 				</th>
 				<th>
-					<f:if condition="{sortBy} == 'Modified'">
+					<f:if condition="{sortBy} === 'Modified'">
 						<f:then>
-							<f:if condition="{sortDirection} == 'ASC'">
+							<f:if condition="{sortDirection} === 'ASC'">
 								<f:then>
 									<f:link.action action="index" title="{neos:backend.translate(id: 'sortByLastModified', package: 'Neos.Media.Browser')} ({neos:backend.translate(id: 'sortdirection.desc', package: 'Neos.Media.Browser') -> f:format.case(mode: 'lower')})" data="{neos-toggle: 'tooltip'}" arguments="{sortDirection: 'DESC'}" addQueryString="TRUE">
 										{neos:backend.translate(id: 'field.lastModified', package: 'Neos.Media.Browser')}
@@ -71,7 +71,7 @@
 			'deleteAssetLabel': '{neos:backend.translate(id: \'deleteAsset\', package: \'Neos.Media.Browser\')}'
 		}">
 			<f:for each="{paginatedAssets}" as="asset" iteration="iterator">
-				<tr class="asset draggable-asset{f:if(condition: '{asset.tags -> f:count()} == 0', then: ' neos-media-untagged')}" data-asset-identifier="{asset -> f:format.identifier()}">
+				<tr class="asset draggable-asset{f:if(condition: '{asset.tags -> f:count()} === 0', then: ' neos-media-untagged')}" data-asset-identifier="{asset -> f:format.identifier()}">
 					<td>
 						<div class="neos-list-thumbnail" data-neos-toggle="popover" data-placement="{f:if(condition: '{iterator.index} > 2', then: 'top', else: 'bottom')}" data-trigger="hover" data-title="{f:if(condition: asset.width, then: '{asset.width} x {asset.height}')}" data-html="true" data-content="{m:thumbnail(asset: asset, preset: 'Neos.Media.Browser:Thumbnail', alt: asset.label, async: settings.asyncThumbnails) -> f:format.htmlentities()}">
 							<m:thumbnail asset="{asset}" preset="Neos.Media.Browser:Thumbnail" alt="{asset.label}" async="{settings.asyncThumbnails}" />
