--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/New.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/New.html
@@ -21,7 +21,7 @@
 					<label>{neos:backend.translate(id: 'field.tags', package: 'Neos.Media.Browser')}</label>
 					<f:for each="{tags}" as="tag">
 						<label class="neos-checkbox neos-inline">
-							<f:form.checkbox name="asset[tags][]" value="{tag -> f:format.identifier()}" checked="{f:if(condition: '{tag} == {activeTag}', then: 'checked')}" /><span></span> {tag.label}
+							<f:form.checkbox name="asset[tags][]" value="{tag -> f:format.identifier()}" checked="{f:if(condition: '{tag} === {activeTag}', then: 'checked')}" /><span></span> {tag.label}
 						</label>
 					</f:for>
 				</f:if>
@@ -29,7 +29,7 @@
 					<label>{neos:backend.translate(id: 'collections', package: 'Neos.Media.Browser')}</label>
 					<f:for each="{assetCollections}" as="assetCollection">
 						<label class="neos-checkbox neos-inline">
-							<f:form.checkbox name="asset[assetCollections][]" value="{assetCollection -> f:format.identifier()}" checked="{f:if(condition: '{assetCollection} == {activeAssetCollection}', then: 'checked')}" /><span></span> {assetCollection.title}
+							<f:form.checkbox name="asset[assetCollections][]" value="{assetCollection -> f:format.identifier()}" checked="{f:if(condition: '{assetCollection} === {activeAssetCollection}', then: 'checked')}" /><span></span> {assetCollection.title}
 						</label>
 					</f:for>
 				</f:if>
