--- a/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
+++ b/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
@@ -31,6 +31,7 @@
 }
 .neos.media-browser {
   background-color: transparent;
+  padding-bottom: 30px;
 }
 .neos.media-browser:not(.media-module) .neos-footer {
   position: fixed;
