--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/ReplaceAssetResource.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/ReplaceAssetResource.html
@@ -49,7 +49,7 @@
 				</fieldset>
 			</div>
 
-			<div class="neos-span4 neos-image-example">
+			<div class="neos-image-example">
 				<f:render section="ContentImage" arguments="{_all}" />
 			</div>
 		</div>
