--- a/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
+++ b/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
@@ -662,11 +662,33 @@
 		}
 	}
 
-	//Styles for upload/edit image
-	.neos-row-fluid .neos-image-inputs {
-		float: left;
-		margin-left: 0;
+  .neos-media-content {
+    display: flex;
+    flex-direction: row;
 
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
+  }
+
+  .neos-image-inputs,
+  .neos-image-example {
+    flex: 1;
+  }
+
+  .neos-image-example {
+    margin-bottom: 80px;
+  }
+
+  .neos-image-inputs {
+    margin-right: $unit;
+    @media screen and (max-width: 767px) {
+      margin-right: 0;
+    }
+  }
+
+	//Styles for upload/edit image
+	.neos-image-inputs {
 		legend {
 			display: none;
 		}
@@ -705,7 +727,7 @@
 	}
 
 	//Styles for image preview in edit mode
-	.neos-row-fluid [class*="neos-span"].neos-image-example {
+	.neos-image-example {
 		label {
 			text-align: right;
 
