--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/EditAssetCollection.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/EditAssetCollection.html
@@ -7,8 +7,8 @@
 <f:section name="Content">
 	<f:form method="post" action="updateAssetCollection" object="{assetCollection}" objectName="assetCollection">
 		<legend>{neos:backend.translate(id: 'editCollection', package: 'Neos.Media.Browser')}</legend>
-		<div class="neos-row-fluid">
-			<div class="neos-span6 neos-image-inputs">
+		<div class="neos-media-content">
+			<div class="neos-image-inputs">
 				<fieldset>
 					<legend>{neos:backend.translate(id: 'basics', package: 'Neos.Media.Browser')}</legend>
 					<label for="title">{neos:backend.translate(id: 'field.title', package: 'Neos.Media.Browser')}</label>
