--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/EditTag.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/EditTag.html
@@ -7,8 +7,8 @@
 <f:section name="Content">
 	<f:form method="post" action="updateTag" object="{tag}" objectName="tag">
 		<legend>{neos:backend.translate(id: 'editTag', package: 'Neos.Media.Browser')}</legend>
-		<div class="neos-row-fluid">
-			<div class="neos-span6 neos-image-inputs">
+		<div class="neos-media-content">
+			<div class="neos-image-inputs">
 				<fieldset>
 					<label for="label">{neos:backend.translate(id: 'field.label', package: 'Neos.Media.Browser')}</label>
 					<f:form.textfield property="label" placeholder="{neos:backend.translate(id: 'field.label', package: 'Neos.Media.Browser')}" id="label" />
