--- a/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
+++ b/Neos.Media.Browser/Resources/Public/Styles/MediaBrowser.css
@@ -755,16 +755,36 @@
   cursor: pointer;
   outline: 4px solid #00b5ff;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs {
-  float: left;
-  margin-left: 0;
+.neos.media-browser .neos-media-content {
+  display: flex;
+  flex-direction: row;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs legend {
+@media screen and (max-width: 767px) {
+  .neos.media-browser .neos-media-content {
+    flex-direction: column;
+  }
+}
+.neos.media-browser .neos-image-inputs,
+.neos.media-browser .neos-image-example {
+  flex: 1;
+}
+.neos.media-browser .neos-image-example {
+  margin-bottom: 80px;
+}
+.neos.media-browser .neos-image-inputs {
+  margin-right: 40px;
+}
+@media screen and (max-width: 767px) {
+  .neos.media-browser .neos-image-inputs {
+    margin-right: 0;
+  }
+}
+.neos.media-browser .neos-image-inputs legend {
   display: none;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs input[type="text"],
-.neos.media-browser .neos-row-fluid .neos-image-inputs select,
-.neos.media-browser .neos-row-fluid .neos-image-inputs textarea {
+.neos.media-browser .neos-image-inputs input[type="text"],
+.neos.media-browser .neos-image-inputs select,
+.neos.media-browser .neos-image-inputs textarea {
   width: 100%;
   margin-bottom: 16px;
   background: #3f3f3f;
@@ -777,16 +797,16 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs input[type="text"]:focus,
-.neos.media-browser .neos-row-fluid .neos-image-inputs select:focus,
-.neos.media-browser .neos-row-fluid .neos-image-inputs textarea:focus {
+.neos.media-browser .neos-image-inputs input[type="text"]:focus,
+.neos.media-browser .neos-image-inputs select:focus,
+.neos.media-browser .neos-image-inputs textarea:focus {
   background: #fff;
   outline: 0;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs .neos-tag-select {
+.neos.media-browser .neos-image-inputs .neos-tag-select {
   margin-bottom: 32px;
 }
-.neos.media-browser .neos-row-fluid .neos-image-inputs .neos-button {
+.neos.media-browser .neos-image-inputs .neos-button {
   margin-right: 8px;
   margin-bottom: 32px;
 }
@@ -794,15 +814,15 @@
   font-style: italic;
   padding-bottom: 1em;
 }
-.neos.media-browser .neos-row-fluid [class*="neos-span"].neos-image-example label {
+.neos.media-browser .neos-image-example label {
   text-align: right;
 }
 @media screen and (max-width: 767px) {
-  .neos.media-browser .neos-row-fluid [class*="neos-span"].neos-image-example label {
+  .neos.media-browser .neos-image-example label {
     text-align: left;
   }
 }
-.neos.media-browser .neos-row-fluid [class*="neos-span"].neos-image-example .neos-preview-image {
+.neos.media-browser .neos-image-example .neos-preview-image {
   position: relative;
   display: flex;
   justify-content: center;
@@ -815,7 +835,7 @@
   background-repeat: no-repeat;
   overflow: hidden;
 }
-.neos.media-browser .neos-row-fluid [class*="neos-span"].neos-image-example .neos-preview-image img {
+.neos.media-browser .neos-image-example .neos-preview-image img {
   float: none;
   position: absolute;
   top: 50%;
