BUGFIX: Load thumbs in media browser asynchronous
When you open the media module with a lot of high-res images
while the thumbnails are not already generated and cached,
loading can take a long time without noticable feedback.

The templates use a setting not available since the media browser
was split into it's own package. Instead the setting needs to be read
from the Media package.

--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/Edit.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/Edit.html
@@ -124,7 +124,7 @@
 	<label>{neos:backend.translate(id: 'preview', package: 'Neos.Media.Browser')}</label>
 	<div class="neos-preview-image">
 		<a href="{f:uri.resource(resource: asset.resource)}" target="_blank">
-			<m:thumbnail asset="{asset}" preset="Neos.Media.Browser:Preview" alt="{asset.label}" async="{settings.asyncThumbnails}" class="img-polaroid" />
+			<m:thumbnail asset="{asset}" preset="Neos.Media.Browser:Preview" alt="{asset.label}" async="{asyncThumbnails}" class="img-polaroid" />
 		</a>
 	</div>
 </f:section>
