TASK: Remove Selfmade Onclickhandler

--- a/Neos.Neos/Resources/Private/Partials/Backend/UserMenu.html
+++ b/Neos.Neos/Resources/Private/Partials/Backend/UserMenu.html
@@ -1,5 +1,5 @@
 {namespace neos=Neos\Neos\ViewHelpers}
-<div class="neos-button-group neos-user-menu" onClick="this.classList.toggle('neos-open')">
+<div class="neos-button-group neos-user-menu">
 	<button class="neos-dropdown-toggle neos-button" data-neos-toggle="dropdown" href="#" title="{neos:backend.translate(id: 'userSettings.usermenu', source: 'Modules', value: 'User Menu')}" data-neos-tooltip data-placement="left">
 		<i class="icon-user"></i> {user.name.fullName} <i class="icon-caret-down"></i>
 	</button>
