--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/New.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/New.html
@@ -9,7 +9,7 @@
 			<div class="neos-span6 neos-image-inputs">
 				<span class="neos-file-input">
 					<label class="neos-button neos-button-primary" for="resource" title="{neos:backend.translate(id: 'maxUploadSize', arguments: {0: humanReadableMaximumFileUploadSize}, package: 'Neos.Media.Browser')}" data-neos-toggle="tooltip">
-						{neos:backend.translate(id: 'chooseFile', package: 'Neos.Media.Browser')} <i class="icon-file"></i>
+						{neos:backend.translate(id: 'chooseFile', package: 'Neos.Media.Browser')} <i class="fas fa-file"></i>
 					</label>
 					<f:form.upload id="resource" property="resource" additionalAttributes="{required: 'required'}" />
 				</span>
