TASK: fix more icons in Neos.Neos and Neos.Media.Browser

--- a/Neos.Media.Browser/Resources/Private/Partials/ListView.html
+++ b/Neos.Media.Browser/Resources/Private/Partials/ListView.html
@@ -89,7 +89,7 @@
 					<td class="neos-action">
 						<div class="neos-dropdown" id="neos-asset-actionmenu-{asset -> f:format.identifier()}">
 							<a class="dropdown-toggle neos-button neos-button-mini" href="#" data-neos-toggle="dropdown" data-target="#neos-asset-actionmenu-{asset -> f:format.identifier()}">
-								<i class="fas fa-ellipsis-horizontal"></i>
+								<i class="fas fa-ellipsis-h"></i>
 							</a>
 							<div class="neos-dropdown-menu-list neos-pull-right" role="menu">
 								<ul>
