--- a/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
+++ b/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
@@ -604,7 +604,7 @@
 					width: $unit;
 					padding: 0;
 
-					.icon-ellipsis-horizontal {
+					.fa-ellipsis-h {
 						line-height: $unit;
 					}
 				}
@@ -869,7 +869,7 @@
 				}
 			}
 
-			.icon-move {
+			.fa-move {
 				cursor: move;
 			}
 		}
@@ -967,11 +967,11 @@
 		cursor: pointer;
 	}
 
-	.icon-ok-sign {
+	.fa-ok-sign {
 		color: $green;
 	}
 
-	.icon-exclamation-sign {
+	.fa-exclamation-sign {
 		color: $orange;
 	}
 }
