Refactor FileTypeIconService to use filename instead of asset
The FileTypeIconService now expects a filename instead of a full-
blown Asset object for providing a matching file type icon.

The reason for this change is, that in some cases an Asset object is
not (yet) available, for example when dealing with Asset Proxy objects
from external asset sources.

The FileTypeIconService does not belong to the public API and therefore
the change isn't considered breaking backwards-compatibility.

--- a/Neos.Media.Browser/Resources/Private/Partials/ThumbnailView.html
+++ b/Neos.Media.Browser/Resources/Private/Partials/ThumbnailView.html
@@ -35,7 +35,7 @@
                         </f:else>
                     </f:if>
                     <div class="neos-img-label">
-                        <mediaBrowser:fileTypeIcon filename="{assetProxy.filename}" height="32"/>
+                        <m:fileTypeIcon filename="{assetProxy.filename}" height="32"/>
                         <f:if condition="!{activeAssetSource.readOnly}">
                             <div class="neos-dropdown neos-pull-right" id="neos-asset-actionmenu-{assetProxy.identifier}">
                                 <a class="dropdown-toggle neos-button" href="#" data-neos-toggle="dropdown" data-target="#neos-asset-actionmenu-{assetProxy.identifier}">
